--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<h2>Heroes</h2>
 <isotope-grid>
-  <isotope-item *ngFor="let item of items">{{item.name}}</isotope-item>
+    <div class="grid-sizer"></div>
+  <isotope-item *ngFor="let hero of heroes">
+    <app-character-card [character]="hero"></app-character-card>
+  </isotope-item>
+</isotope-grid>
+
+
+<h2>Villains</h2>
+<isotope-grid>
+  <div class="grid-sizer"></div>
+  <isotope-item *ngFor="let villain of villains">
+      <app-character-card [character]="villain"></app-character-card>
+  </isotope-item>
 </isotope-grid>
